<resources>

    <string name="app_name">Tabby</string>

    <string name="menu_title_share">Share</string>
    <string name="menu_title_email">Email us</string>

    <string name="text_launch_custom_tab">Launch Custom Tab</string>

    <string name="text_toolbar_colored">Toolbar colored</string>
    <string name="text_title_displayed">Title displayed</string>
    <string name="text_back_arrow_displayed">Back Arrow displayed</string>
    <string name="text_actionbar_icon_displayed">Actionbar icon</string>
    <string name="text_menu_items_displayed">Menu items</string>
    <string name="text_custom_animations">Custom animations</string>

</resources>
